--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Peter Vitez",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {}
 }
