--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "simpleExpress",
+  "name": "simple-express",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "Peter Vitez",
@@ -13,5 +14,10 @@
     "express": "^4.16.2",
     "socket.io": "^2.0.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "nodemon": "^1.14.11"
+  }
 }
